# job_scraper

./: .gitignore  pyproject.toml
job_scraper/: main.py
job_scraper/config/: logging_config.py  settings.py
job_scraper/scrapers/: scraper.py  scraper_manager.py  wanted_scraper.py
job_scraper/utils/: url_validator.py
