[tool.poetry]
name = "job-scraper"
version = "0.1.0"
description = ""
authors = ["Jihyeok Jeong <wlgurdlcjswo@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
isort = "^5.13.2"
black = "^24.10.0"
flake8 = "^7.1.1"
flake8-mutable = "^1.2.0"
flake8-pyproject = "^1.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
